# vulkan-cmake

./: .gitignore  CMakeLists.txt  compile_shaders.bat  vcpkg.json
shaders/: simple_shader.vert  simple_shader.vert.spv
src/: lve_app_base.cpp  lve_app_base.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_swap_chain.cpp  lve_window.cpp  lve_window.hpp  main.cpp
